[package]
name = "replay-reader"
version = "0.1.0"
authors = ["ThisNils <ThisNils@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-soft = "0.6.4"
block-modes = "0.7.0"
byteorder = "1.2"
lazy_static = "1.4.0"
regex = "1.5.5"
